k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: orion-microcrm
  labels:
    app.kubernetes.io/name: orion-microcrm
